--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "typescript-pro-project",
   "version": "1.0.0",
   "description": "A micro library written from scrath to take advantage of the power of TypeScript",
-  "main": "index.js",
+  "main": "build/index.umd.js",
   "scripts": {
     "test": "jest",
     "test: watch": "npm test -- --watch",
-    "build": "tsc -p tsconfig.json"
+    "prebuild": "rm -rf dist && rm -rf build",
+    "build": "tsc -p tsconfig.json && rollup -c rollup.config.js",
+    "postbuild": "cp dist/*.d.ts build/",
+    "precommit": "npm test && lint-staged"
   },
   "author": "liyang",
   "license": "MIT",
+  "files": [
+    "build"
+  ],
+  "types": "build/index.d.ts",
   "devDependencies": {
     "@types/jest": "^26.0.4",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
+    "rollup": "^2.20.0",
+    "rollup-plugin-sourcemaps": "^0.6.2",
     "ts-jest": "^26.1.1",
     "typescript": "^3.9.6"
   },
@@ -27,6 +36,18 @@
     "transform": {
       ".ts": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": ".*\\.spec\\.ts$"
+    "testRegex": ".*\\.spec\\.ts$",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
